updated data analysis and imputing technique

--- a/src/neural_nets.ipynb
+++ b/src/neural_nets.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "id": "367b70eb",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "32bd94a4",
    "metadata": {},
    "outputs": [
@@ -206,7 +206,7 @@
        "2021-01-01 02:00:00    NaN    NaN  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "07f43eee-75b5-4419-b65b-0da3ba751f7c",
    "metadata": {},
    "outputs": [
@@ -320,7 +320,7 @@
        "2021-01-01 02:00:00        0.00      7.60      78.00       4.00"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "22b96df3-5815-4a84-bb37-2b9bd22f1f23",
    "metadata": {},
    "outputs": [],
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "id": "7d755746",
    "metadata": {},
    "outputs": [
@@ -361,8 +361,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training data shape:  (8198, 10)\n",
-      "Test data shape:  (1373, 10)\n"
+      "Training data shape:  (13664, 10)\n",
+      "Test data shape:  (690, 10)\n"
      ]
     }
    ],
@@ -420,6 +420,19 @@
     "\n",
     "print('Training data shape: ', data_train['d'].shape)\n",
     "print('Test data shape: ', data_test['d'].shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "916faac6",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "data_train['d'].to_csv('../data/inflow_data_imputed.csv')\n",
+    "data_train['w'].to_csv('../data/weather_data_imputed.csv')"
    ]
   },
   {
@@ -14929,7 +14942,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
